# youtube-sort-playlist

./: .activate.fish  .gitignore  .pre-commit-config.yaml  Makefile  README.md  opencode.jsonc  playlist_updates.py  pylintrc  pyproject.toml  requirements-bootstrap.txt  requirements-dev-minimal.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.cfg
