[project]
name = "youtube-sort-playlist"
version = "0.0.0"
requires-python = "~=3.9"
dependencies = [
    "addict",
    "arrow",
    "google-api-python-client",
    "isodate",
    "oauth2client",
    "pyyaml",
    "tqdm",
    "xdg",
]

[dependency-groups]
dev = [
    "ipython",
    "mypy",
    "pre-commit",
    "pudb",
    "pylint",
    "ruff",
    "requirements-tools",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
ignore_missing_imports = true
